--- a/src/components/Page/PageBody/About/About.scss
+++ b/src/components/Page/PageBody/About/About.scss
@@ -6,28 +6,28 @@
   box-shadow: $args;
 }
 
-#about-container{
+#about-container {
   display: flex;
   flex-direction: column;
   font-family: Roboto, sans-serif;
   min-height: 100vh;
 }
 
-.about-title{
+.about-title {
   text-align: center;
   font-weight: bold;
   color: #374457;
   font-size: 3rem;
-  padding: .35rem;
+  padding: 0.35rem;
   font-family: Roboto, sans-serif;
 }
 
-.about-content{
+.about-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  p{
+  p {
     line-height: 1.5rem;
     font-size: 1.5rem;
     text-align: left;
@@ -40,7 +40,7 @@
   //   // background: none repeat scroll 0 0 #E9E9E9;
   // }
 
-  .about-table{
+  .about-table {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -49,23 +49,21 @@
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
-  #about-container{
+  #about-container {
     min-height: 0;
   }
-  .about-title{
+  .about-title {
     font-size: 2rem;
   }
 
-  .about-content{
+  .about-content {
     // margin-right: 10%;
-    font-size: .75rem;
-    .about-table{
+    font-size: 0.75rem;
+    .about-table {
       flex-direction: column;
     }
-    img{
+    img {
       width: 75%;
     }
   }
-
-
 }
