--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -14,73 +14,73 @@
   margin: 1.5rem 0;
   padding: 1rem;
   font-family: Roboto, sans-serif;
-  -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
-  -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
-  box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
   border-radius: 0.25rem;
   -webkit-transition: box-shadow 0.2s, width 0.3s;
   -moz-transition: box-shadow 0.2s, width 0.3s;
   -ms-transition: box-shadow 0.2s, width 0.3s;
   -o-transition: box-shadow 0.2s, width 0.3s;
   transition: box-shadow 0.2s, width 0.3s;
-  
-  .expanded-text{
+
+  .expanded-text {
     height: auto;
     max-height: 0px;
     overflow: hidden;
-    @include transition(max-height .3s);
+    @include transition(max-height 0.3s);
   }
 
-  .normal-text{
+  .normal-text {
     height: auto;
     max-height: 100vh;
     overflow: hidden;
-    @include transition(max-height .3s);
+    @include transition(max-height 0.3s);
   }
 
   &:hover {
-    -webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
-    box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.25);
   }
-  
+
   &.small {
     .card-content {
       display: grid;
       grid-template-columns: 1fr 1fr;
     }
-    
+
     .card-details {
       align-self: flex-start;
       font-size: 1.1rem;
     }
-    
+
     .image-container {
       align-self: center;
       width: 100%;
-  
+
       img {
         height: 100%;
       }
     }
   }
 
-  &.large{
+  &.large {
     width: 75%;
 
-    .card-content{
+    .card-content {
       align-content: center;
     }
 
-    .image-container{
+    .image-container {
       justify-content: center;
       width: 75%;
     }
 
-    .expanded-text{
+    .expanded-text {
       max-height: 100vh;
     }
-    .normal-text{
+    .normal-text {
       max-height: 0;
     }
   }
@@ -93,7 +93,7 @@
   grid-area: 1/1;
 }
 
-.card-header-details{
+.card-header-details {
   display: flex;
 }
 
@@ -118,7 +118,7 @@
 
 .card-buttons {
   color: #374457;
-  @include transition(color .3s);
+  @include transition(color 0.3s);
   &:hover {
     color: #556070;
   }
@@ -183,26 +183,26 @@ img {
   .card {
     width: 90%;
     font-size: 3vw;
-    &.large{
+    &.large {
       width: 90%;
-    
-        .image-container{
-          width: 100%;
-        }
+
+      .image-container {
+        width: 100%;
       }
     }
-
-  .card:hover {
-    -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
-    box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   }
 
-  .card-title{
+  .card:hover {
+    -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  }
+
+  .card-title {
     font-size: 135%;
     width: 75%;
   }
-  .card-date{
+  .card-date {
     font-size: 2.7vw;
   }
 }
