--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: rgb(82,86,89);
+  background-color: rgb(82, 86, 89);
   height: 100%;
   display: flex;
   justify-content: center;
