--- a/src/components/Page/PageBody/About/About.css
+++ b/src/components/Page/PageBody/About/About.css
@@ -10,7 +10,8 @@
   font-weight: bold;
   color: #374457;
   font-size: 3rem;
-  padding: 0.35em;
+  padding: 0.35rem;
+  padding-bottom: 2rem;
   font-family: Roboto, sans-serif;
 }
 
@@ -23,6 +24,15 @@
   line-height: 1.5rem;
   font-size: 1.5rem;
   text-align: left;
+}
+.about-content #about-image {
+  width: 20vw;
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  -ms-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  -o-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  border-radius: 50%;
 }
 .about-content .about-table {
   display: flex;
