--- a/src/components/Page/PageBody/About/About.css
+++ b/src/components/Page/PageBody/About/About.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   font-family: Roboto, sans-serif;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .about-title {
@@ -10,7 +10,7 @@
   font-weight: bold;
   color: #374457;
   font-size: 3rem;
-  padding: 0.35rem;
+  padding-top: 2rem;
   padding-bottom: 2rem;
   font-family: Roboto, sans-serif;
 }
@@ -41,7 +41,7 @@
   width: 95%;
 }
 
-@media only screen and (max-width: 1100px) and (orientation: portrait) {
+@media only screen and (max-width: 1100px) {
   #about-container {
     min-height: 0;
   }
